# VirtualWindTunnel

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  INSTALL_ARCH.md  README.md  imgui.ini  linux-install.sh  vcpkg.json
scripts/: install_linux.sh
shaders/: aero_forces.comp  fluid_lbm.comp  fluid_lbm.comp.spv  fullscreen.frag  fullscreen.vert  fullscreen.vert.spv  velocity_slice.comp  velocity_slice.comp.spv
src/: environment.h  fluid_solver.cpp  fluid_solver.h  logger.h  main.cpp  mesh_loader.cpp  mesh_loader.h  platform.h  renderer.cpp  renderer.h  sim_scaler.h  vk_engine.cpp  vk_engine.h  vk_types.h
